<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/therian_background"
    android:padding="24dp">

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textColor="@color/therian_text_primary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register_subtitle"
        android:textColor="@color/therian_text_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerEmailLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@color/therian_card"
        app:boxStrokeColor="@color/therian_accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerSubtitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/therian_text_primary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerPasswordLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxBackgroundColor="@color/therian_card"
        app:boxStrokeColor="@color/therian_accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerEmailLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/therian_text_primary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerUsernameLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxBackgroundColor="@color/therian_card"
        app:boxStrokeColor="@color/therian_accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerPasswordLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerUsernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"
            android:textColor="@color/therian_text_primary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerSpeciesLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxBackgroundColor="@color/therian_card"
        app:boxStrokeColor="@color/therian_accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerUsernameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerSpeciesInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_species"
            android:textColor="@color/therian_text_primary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAccountButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/btn_create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerSpeciesLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/goLoginButton"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/link_go_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createAccountButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
